--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container mt-4">
-        <h1 class="mb-4">Sistema de Envío de Correos 1099</h1>
+        <h1 class="mb-4">Sistema de Envío de Correos</h1>
 
         <!-- Importar Excel -->
         <div class="card mb-4">
